tests/should_fail/zst.coma
module M_zst_pointers_may_be_equal
  use creusot.slice.Slice64
  use seq.Seq
  use creusot.int.UInt64
  use mach.int.Int
  use creusot.prelude.MutBorrow
  use creusot.prelude.Opaque
  use creusot.prelude.Ptr
  use creusot.int.Int64
  use creusot.prelude.Any
  
  type t_Vec_unit_Global
  
  constant const_MAX: UInt64.t = (18446744073709551615: UInt64.t)
  
  function view_Vec_unit_Global (self: t_Vec_unit_Global) : Seq.seq ()
  
  axiom view_Vec_unit_Global_spec: forall self: t_Vec_unit_Global. Seq.length (view_Vec_unit_Global self)
      <= UInt64.t'int const_MAX
  
  function view_Box_slice_unit_Global [@inline:trivial] (self: Slice64.slice ()) : Seq.seq () = Slice64.view self
  
  meta "rewrite_def" function view_Box_slice_unit_Global
  
  let rec into_vec_unit (self_: Slice64.slice ()) (return (x: t_Vec_unit_Global)) = any
    [ return (result: t_Vec_unit_Global) -> {view_Vec_unit_Global result = view_Box_slice_unit_Global self_}
      (! return {result}) ]
  
  predicate in_bounds_usize [@inline:trivial] (self: UInt64.t) (seq: Seq.seq ()) = UInt64.t'int self < Seq.length seq
  
  meta "rewrite_def" predicate in_bounds_usize
  
  predicate has_value_usize [@inline:trivial] (self: UInt64.t) (seq: Seq.seq ()) (out: ()) =
    Seq.get seq (UInt64.t'int self) = out
  
  meta "rewrite_def" predicate has_value_usize
  
  predicate resolve_elswhere_usize [@inline:trivial] (self: UInt64.t) (old': Seq.seq ()) (fin: Seq.seq ()) =
    forall i: int. 0 <= i /\ i <> UInt64.t'int self /\ i < Seq.length old' -> Seq.get old' i = Seq.get fin i
  
  meta "rewrite_def" predicate resolve_elswhere_usize
  
  let rec index_mut_Vec_unit_Global (self_: MutBorrow.t t_Vec_unit_Global) (ix: UInt64.t) (return (x: MutBorrow.t ())) =
    {[@expl:index_mut requires] in_bounds_usize ix (view_Vec_unit_Global self_.current)}
    any
    [ return (result: MutBorrow.t ()) -> {has_value_usize ix (view_Vec_unit_Global self_.current) result.current}
      {has_value_usize ix (view_Vec_unit_Global self_.final) result.final}
      {resolve_elswhere_usize ix (view_Vec_unit_Global self_.current) (view_Vec_unit_Global self_.final)}
      {Seq.length (view_Vec_unit_Global self_.final) = Seq.length (view_Vec_unit_Global self_.current)}
      (! return {result}) ]
  
  type t_Perm_ptr_unit
  
  type tup2_ptr_unit_Ghost_refmut_Perm_ptr_unit = { f0: Opaque.ptr; f1: MutBorrow.t t_Perm_ptr_unit }
  
  predicate is_null_ptr_unit (self: Opaque.ptr) = Ptr.addr_logic_u64 self = (0: UInt64.t)
  
  function ward_ptr_unit (self: t_Perm_ptr_unit) : Opaque.ptr
  
  predicate ptr_is_aligned_opaque_unit (self: t_Perm_ptr_unit)
  
  predicate metadata_matches_unit [@inline:trivial] (_value: ()) (_metadata: ()) = true
  
  meta "rewrite_def" predicate metadata_matches_unit
  
  function val_ptr_unit (self: t_Perm_ptr_unit) : ()
  
  function metadata_unit (_1: Opaque.ptr) : ()
  
  constant size_of_unit: int = 0
  
  meta "rewrite_def" constant size_of_unit
  
  axiom size_of_unit_spec: 0 <= size_of_unit
  
  function size_of_val_unit [@inline:trivial] (val': ()) : int = size_of_unit
  
  meta "rewrite_def" function size_of_val_unit
  
  axiom size_of_val_unit_spec: forall val': (). 0 <= size_of_val_unit val'
  
  constant const_MAX'0: Int64.t = (9223372036854775807: Int64.t)
  
  predicate inv_ref_unit [@inline:trivial] (_1: ()) = true
  
  meta "rewrite_def" predicate inv_ref_unit
  
  predicate invariant_Perm_ptr_unit (self: t_Perm_ptr_unit) =
    not is_null_ptr_unit (ward_ptr_unit self)
    /\ ptr_is_aligned_opaque_unit self
    /\ metadata_matches_unit (val_ptr_unit self) (metadata_unit (ward_ptr_unit self))
    /\ size_of_val_unit (val_ptr_unit self) <= Int64.to_int const_MAX'0
    /\ UInt64.t'int (Ptr.addr_logic_u64 (ward_ptr_unit self)) + size_of_val_unit (val_ptr_unit self)
      <= UInt64.t'int const_MAX
    /\ inv_ref_unit (val_ptr_unit self)
  
  predicate inv_Perm_ptr_unit (_1: t_Perm_ptr_unit)
  
  axiom inv_axiom [@rewrite]: forall x: t_Perm_ptr_unit [inv_Perm_ptr_unit x]. inv_Perm_ptr_unit x
      = invariant_Perm_ptr_unit x
  
  predicate invariant_refmut_Perm_ptr_unit [@inline:trivial] (self: MutBorrow.t t_Perm_ptr_unit) =
    inv_Perm_ptr_unit self.current /\ inv_Perm_ptr_unit self.final
  
  meta "rewrite_def" predicate invariant_refmut_Perm_ptr_unit
  
  predicate inv_refmut_Perm_ptr_unit [@inline:trivial] (_1: MutBorrow.t t_Perm_ptr_unit) =
    invariant_refmut_Perm_ptr_unit _1
  
  meta "rewrite_def" predicate inv_refmut_Perm_ptr_unit
  
  predicate invariant_Ghost_refmut_Perm_ptr_unit [@inline:trivial] (self: MutBorrow.t t_Perm_ptr_unit) =
    inv_refmut_Perm_ptr_unit self
  
  meta "rewrite_def" predicate invariant_Ghost_refmut_Perm_ptr_unit
  
  predicate inv_Ghost_refmut_Perm_ptr_unit [@inline:trivial] (_1: MutBorrow.t t_Perm_ptr_unit) =
    invariant_Ghost_refmut_Perm_ptr_unit _1
  
  meta "rewrite_def" predicate inv_Ghost_refmut_Perm_ptr_unit
  
  predicate inv_tup2_ptr_unit_Ghost_refmut_Perm_ptr_unit [@inline:trivial] (_1: tup2_ptr_unit_Ghost_refmut_Perm_ptr_unit) =
    inv_Ghost_refmut_Perm_ptr_unit _1.f1
  
  meta "rewrite_def" predicate inv_tup2_ptr_unit_Ghost_refmut_Perm_ptr_unit
  
  let rec from_mut_unit (r: MutBorrow.t ()) (return (x: tup2_ptr_unit_Ghost_refmut_Perm_ptr_unit)) = any
    [ return (result: tup2_ptr_unit_Ghost_refmut_Perm_ptr_unit) -> {inv_tup2_ptr_unit_Ghost_refmut_Perm_ptr_unit result}
      {ward_ptr_unit result.f1.current = result.f0}
      {val_ptr_unit result.f1.current = r.current}
      {val_ptr_unit result.f1.final = r.final}
      (! return {result}) ]
  
  predicate resolve_refmut_unit [@inline:trivial] (_1: MutBorrow.t ()) = _1.final = _1.current
  
  meta "rewrite_def" predicate resolve_refmut_unit
  
  let rec index_Vec_unit_Global (self_: t_Vec_unit_Global) (ix: UInt64.t) (return (x: ())) =
    {[@expl:index requires] in_bounds_usize ix (view_Vec_unit_Global self_)}
    any [ return (result: ()) -> {has_value_usize ix (view_Vec_unit_Global self_) result} (! return {result}) ]
  
  type tup2_ptr_unit_Ghost_ref_Perm_ptr_unit = { f0'0: Opaque.ptr; f1'0: t_Perm_ptr_unit }
  
  predicate invariant_ref_Perm_ptr_unit [@inline:trivial] (self: t_Perm_ptr_unit) = inv_Perm_ptr_unit self
  
  meta "rewrite_def" predicate invariant_ref_Perm_ptr_unit
  
  predicate inv_ref_Perm_ptr_unit [@inline:trivial] (_1: t_Perm_ptr_unit) = invariant_ref_Perm_ptr_unit _1
  
  meta "rewrite_def" predicate inv_ref_Perm_ptr_unit
  
  predicate invariant_Ghost_ref_Perm_ptr_unit [@inline:trivial] (self: t_Perm_ptr_unit) = inv_ref_Perm_ptr_unit self
  
  meta "rewrite_def" predicate invariant_Ghost_ref_Perm_ptr_unit
  
  predicate inv_Ghost_ref_Perm_ptr_unit [@inline:trivial] (_1: t_Perm_ptr_unit) = invariant_Ghost_ref_Perm_ptr_unit _1
  
  meta "rewrite_def" predicate inv_Ghost_ref_Perm_ptr_unit
  
  predicate inv_tup2_ptr_unit_Ghost_ref_Perm_ptr_unit [@inline:trivial] (_1: tup2_ptr_unit_Ghost_ref_Perm_ptr_unit) =
    inv_Ghost_ref_Perm_ptr_unit _1.f1'0
  
  meta "rewrite_def" predicate inv_tup2_ptr_unit_Ghost_ref_Perm_ptr_unit
  
  let rec from_ref_unit (r: ()) (return (x: tup2_ptr_unit_Ghost_ref_Perm_ptr_unit)) = any
    [ return (result: tup2_ptr_unit_Ghost_ref_Perm_ptr_unit) -> {inv_tup2_ptr_unit_Ghost_ref_Perm_ptr_unit result}
      {ward_ptr_unit result.f1'0 = result.f0'0}
      {val_ptr_unit result.f1'0 = r}
      (! return {result}) ]
  
  let rec into_inner_refmut_Perm_ptr_unit (self: MutBorrow.t t_Perm_ptr_unit)
    (return (x: MutBorrow.t t_Perm_ptr_unit)) =
    {[@expl:into_inner 'self' type invariant] inv_Ghost_refmut_Perm_ptr_unit self}
    any
    [ return (result: MutBorrow.t t_Perm_ptr_unit) -> {inv_refmut_Perm_ptr_unit result}
      {result = self}
      (! return {result}) ]
  
  let rec into_inner_ref_Perm_ptr_unit (self: t_Perm_ptr_unit) (return (x: t_Perm_ptr_unit)) =
    {[@expl:into_inner 'self' type invariant] inv_Ghost_ref_Perm_ptr_unit self}
    any [ return (result: t_Perm_ptr_unit) -> {inv_ref_Perm_ptr_unit result} {result = self} (! return {result}) ]
  
  predicate is_disjoint_ptr_unit [@inline:trivial] (self: Opaque.ptr) (self_val: ()) (other: Opaque.ptr) (other_val: ()) =
    size_of_val_unit self_val <> 0 /\ size_of_val_unit other_val <> 0
    -> Ptr.addr_logic_u64 self <> Ptr.addr_logic_u64 other
  
  meta "rewrite_def" predicate is_disjoint_ptr_unit
  
  let rec disjoint_lemma_ptr_unit (self: MutBorrow.t t_Perm_ptr_unit) (other: t_Perm_ptr_unit) (return (x: ())) =
    {[@expl:disjoint_lemma 'self' type invariant] inv_refmut_Perm_ptr_unit self}
    {[@expl:disjoint_lemma 'other' type invariant] inv_ref_Perm_ptr_unit other}
    any
    [ return (result: ()) ->
    {is_disjoint_ptr_unit (ward_ptr_unit self.current) (val_ptr_unit self.current) (ward_ptr_unit other) (val_ptr_unit other)}
      {self.current = self.final}
      (! return {result}) ]
  
  predicate resolve_refmut_Perm_ptr_unit [@inline:trivial] (_1: MutBorrow.t t_Perm_ptr_unit) = _1.final = _1.current
  
  meta "rewrite_def" predicate resolve_refmut_Perm_ptr_unit
  
  let rec new_unit (x: ()) (return (x'0: ())) = any [ return (result: ()) -> {result = x} (! return {result}) ]
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec zst_pointers_may_be_equal (return (x: ())) = (! bb0
    [ bb0 = s0
      [ s0 = any
        [ any_ (__arr_temp: Slice64.array ()) -> (! -{Seq.get __arr_temp.Slice64.elts 0 = _5
          /\ Seq.length __arr_temp.Slice64.elts = 1}-
          [ &_4 <- __arr_temp ] s1) ]
      | s1 = into_vec_unit {_4} (fun (_x: t_Vec_unit_Global) -> [ &v0 <- _x ] s2)
      | s2 = any
        [ any_ (__arr_temp: Slice64.array ()) -> (! -{Seq.get __arr_temp.Slice64.elts 0 = _10
          /\ Seq.length __arr_temp.Slice64.elts = 1}-
          [ &_9 <- __arr_temp ] s3) ]
      | s3 = into_vec_unit {_9} (fun (_x: t_Vec_unit_Global) -> [ &v1 <- _x ] s4)
      | s4 = MutBorrow.borrow_mut <t_Vec_unit_Global> {v0}
          (fun (_bor: MutBorrow.t t_Vec_unit_Global) -> [ &_17 <- _bor ] [ &v0 <- _bor.final ] s5)
      | s5 = index_mut_Vec_unit_Global {_17} {(0: UInt64.t)} (fun (_x: MutBorrow.t ()) -> [ &_16 <- _x ] s6)
      | s6 = MutBorrow.borrow_final <()> {_16.current} {MutBorrow.get_id _16}
          (fun (_bor: MutBorrow.t ()) -> [ &_15 <- _bor ] [ &_16 <- { _16 with current = _bor.final } ] s7)
      | s7 = MutBorrow.borrow_final <()> {_15.current} {MutBorrow.get_id _15}
          (fun (_bor: MutBorrow.t ()) -> [ &_14 <- _bor ] [ &_15 <- { _15 with current = _bor.final } ] s8)
      | s8 = from_mut_unit {_14} (fun (_x: tup2_ptr_unit_Ghost_refmut_Perm_ptr_unit) -> [ &_13 <- _x ] s9)
      | s9 = [ &p1 <- _13.f0 ] s10
      | s10 = [ &own1 <- _13.f1 ] s11
      | s11 = -{resolve_refmut_unit _16}- s12
      | s12 = -{resolve_refmut_unit _15}- s13
      | s13 = index_Vec_unit_Global {v1} {(0: UInt64.t)} (fun (_x: ()) -> [ &_23 <- _x ] s14)
      | s14 = [ &_22 <- _23 ] s15
      | s15 = from_ref_unit {_22} (fun (_x: tup2_ptr_unit_Ghost_ref_Perm_ptr_unit) -> [ &_20 <- _x ] s16)
      | s16 = [ &p2 <- _20.f0'0 ] s17
      | s17 = [ &own2 <- _20.f1'0 ] s18
      | s18 = into_inner_refmut_Perm_ptr_unit {own1} (fun (_x: MutBorrow.t t_Perm_ptr_unit) -> [ &_28 <- _x ] s19)
      | s19 = into_inner_ref_Perm_ptr_unit {own2} (fun (_x: t_Perm_ptr_unit) -> [ &_31 <- _x ] s20)
      | s20 = MutBorrow.borrow_final <t_Perm_ptr_unit> {_28.current} {MutBorrow.get_id _28}
          (fun (_bor: MutBorrow.t t_Perm_ptr_unit) ->
            [ &_27 <- _bor ] -{inv_Perm_ptr_unit _bor.final}-
            [ &_28 <- { _28 with current = _bor.final } ] s21) [ _ck -> (! {inv_Perm_ptr_unit _28.current} any) ]
      | s21 = disjoint_lemma_ptr_unit {_27} {_31} (fun (_x: ()) -> [ &_26 <- _x ] s22)
      | s22 = s23 [ _ck -> (! {[@expl:type invariant] inv_refmut_Perm_ptr_unit _28} any) ]
      | s23 = -{resolve_refmut_Perm_ptr_unit _28}- s24
      | s24 = new_unit {_26} (fun (_x: ()) -> [ &_25 <- _x ] s25)
      | s25 = {[@expl:assertion] Ptr.addr_logic_u64 p1 <> Ptr.addr_logic_u64 p2} s26
      | s26 = return {_ret} ] ]
    [ & _ret: () = Any.any_l ()
    | & v0: t_Vec_unit_Global = Any.any_l ()
    | & _4: Slice64.array () = Any.any_l ()
    | & _5: () = Any.any_l ()
    | & v1: t_Vec_unit_Global = Any.any_l ()
    | & _9: Slice64.array () = Any.any_l ()
    | & _10: () = Any.any_l ()
    | & p1: Opaque.ptr = Any.any_l ()
    | & own1: MutBorrow.t t_Perm_ptr_unit = Any.any_l ()
    | & _13: tup2_ptr_unit_Ghost_refmut_Perm_ptr_unit = Any.any_l ()
    | & _14: MutBorrow.t () = Any.any_l ()
    | & _15: MutBorrow.t () = Any.any_l ()
    | & _16: MutBorrow.t () = Any.any_l ()
    | & _17: MutBorrow.t t_Vec_unit_Global = Any.any_l ()
    | & p2: Opaque.ptr = Any.any_l ()
    | & own2: t_Perm_ptr_unit = Any.any_l ()
    | & _20: tup2_ptr_unit_Ghost_ref_Perm_ptr_unit = Any.any_l ()
    | & _22: () = Any.any_l ()
    | & _23: () = Any.any_l ()
    | & _25: () = Any.any_l ()
    | & _26: () = Any.any_l ()
    | & _27: MutBorrow.t t_Perm_ptr_unit = Any.any_l ()
    | & _28: MutBorrow.t t_Perm_ptr_unit = Any.any_l ()
    | & _31: t_Perm_ptr_unit = Any.any_l () ]) [ return (result: ()) -> (! return {result}) ]
end
